{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 16,
  "lineage": "2a857270-0896-1325-9f14-e123afe36ade",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "TO-THE-SPACE-AND-BEYOND-nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0359f369baa20ee81",
            "domain": "vpc",
            "id": "eipalloc-0359f369baa20ee81",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-38-240-23.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.240.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TO-THE-SPACE-AND-BEYOND-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-05a46b69b5319b836",
            "id": "igw-05a46b69b5319b836",
            "owner_id": "962615889483",
            "tags": {
              "Name": "TO-THE-SPACE-AND-BEYOND-igw"
            },
            "tags_all": {
              "Name": "TO-THE-SPACE-AND-BEYOND-igw"
            },
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "dependencies": [
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TO-THE-SPACE-AND-BEYOND-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0359f369baa20ee81",
            "connectivity_type": "public",
            "id": "nat-08421ac2c7dba97e9",
            "network_interface_id": "eni-0f99b3a13b9a3cab6",
            "private_ip": "10.4.1.64",
            "public_ip": "13.38.240.23",
            "subnet_id": "subnet-0356a5acf44008a51",
            "tags": {
              "Name": "TO-THE-SPACE-AND-BEYOND-natgw"
            },
            "tags_all": {
              "Name": "TO-THE-SPACE-AND-BEYOND-natgw"
            }
          },
          "dependencies": [
            "aws_eip.TO-THE-SPACE-AND-BEYOND-nateip",
            "aws_subnet.TO-THE-SPACE-AND-BEYOND-SUBNET-PUBLIC",
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "TO-THE-SPACE-AND-BEYOND-defroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a46b69b5319b836",
            "id": "r-rtb-0848602479ce3358e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0848602479ce3358e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TO-THE-SPACE-AND-BEYOND-igw",
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TO-THE-SPACE-AND-BEYOND-privrtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0f4909aeaa986ccfd",
            "id": "rtb-0f4909aeaa986ccfd",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08421ac2c7dba97e9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.TO-THE-SPACE-AND-BEYOND-nateip",
            "aws_nat_gateway.TO-THE-SPACE-AND-BEYOND-natgw",
            "aws_subnet.TO-THE-SPACE-AND-BEYOND-SUBNET-PUBLIC",
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TO-THE-SPACE-AND-BEYOND-privrtb-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9e0ac863baca71a",
            "route_table_id": "rtb-0f4909aeaa986ccfd",
            "subnet_id": "subnet-05aa40241eac38c68"
          },
          "dependencies": [
            "aws_eip.TO-THE-SPACE-AND-BEYOND-nateip",
            "aws_nat_gateway.TO-THE-SPACE-AND-BEYOND-natgw",
            "aws_route_table.TO-THE-SPACE-AND-BEYOND-privrtb",
            "aws_subnet.TO-THE-SPACE-AND-BEYOND-SUBNET-PRIVATE",
            "aws_subnet.TO-THE-SPACE-AND-BEYOND-SUBNET-PUBLIC",
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TO-THE-SPACE-AND-BEYOND-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0a74ab8f11519a9b8",
            "description": "TO-THE-SPACE-AND-BEYOND-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a74ab8f11519a9b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auto generated rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TO-THE-SPACE-AND-BEYOND-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TO-THE-SPACE-AND-BEYOND-SG-RPROXY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0ce06a9b7cfbaab9a",
            "description": "TO-THE-SPACE-AND-BEYOND-SG-RPROXY",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce06a9b7cfbaab9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auto generated rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auto generated rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Auto generated rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a74ab8f11519a9b8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TO-THE-SPACE-AND-BEYOND-SG-RPROXY",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TO-THE-SPACE-AND-BEYOND-SG-ADMIN",
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TO-THE-SPACE-AND-BEYOND-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0276659d4a2b82838",
            "description": "TO-THE-SPACE-AND-BEYOND-SG-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow out traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0276659d4a2b82838",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Auto generated rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a74ab8f11519a9b8"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Auto generated rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce06a9b7cfbaab9a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TO-THE-SPACE-AND-BEYOND-SG-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TO-THE-SPACE-AND-BEYOND-SG-ADMIN",
            "aws_security_group.TO-THE-SPACE-AND-BEYOND-SG-RPROXY",
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TO-THE-SPACE-AND-BEYOND-SUBNET-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-05aa40241eac38c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.4.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aa40241eac38c68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TO-THE-SPACE-AND-BEYOND-SUBNET-PRIVATE"
            },
            "tags_all": {
              "Name": "TO-THE-SPACE-AND-BEYOND-SUBNET-PRIVATE"
            },
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "dependencies": [
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TO-THE-SPACE-AND-BEYOND-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0356a5acf44008a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0356a5acf44008a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TO-THE-SPACE-AND-BEYOND-pub"
            },
            "tags_all": {
              "Name": "TO-THE-SPACE-AND-BEYOND-pub"
            },
            "vpc_id": "vpc-0719f047e0a3621c8"
          },
          "dependencies": [
            "aws_vpc.TO-THE-SPACE-AND-BEYOND-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TO-THE-SPACE-AND-BEYOND-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0719f047e0a3621c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-09eb7aa9130396375",
            "default_route_table_id": "rtb-0848602479ce3358e",
            "default_security_group_id": "sg-0b737e4f65fadb1c5",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0719f047e0a3621c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0848602479ce3358e",
            "owner_id": "962615889483",
            "tags": {
              "Name": "TO-THE-SPACE-AND-BEYOND-VPC"
            },
            "tags_all": {
              "Name": "TO-THE-SPACE-AND-BEYOND-VPC"
            }
          }
        }
      ]
    }
  ]
}